--- a/.env.example
+++ b/.env.example
@@ -20,7 +20,7 @@ REFRESH_TOKEN_EXPIRATION=7d
 
 # Google Gemini AI
 GEMINI_API_KEY=your_gemini_api_key_here
-GEMINI_MODEL=gemini-3-pro-preview
+GEMINI_MODEL=gemini-2.5-flash
 
 # AWS S3 Configuration
 AWS_ACCESS_KEY_ID=your_aws_access_key
