added queue handling

--- a/.env.example
+++ b/.env.example
@@ -10,6 +10,8 @@ DB_POOL_MAX=10
 
 # Redis Configuration
 REDIS_URL=redis://localhost:6379
+REDIS_HOST=localhost
+REDIS_PORT=6379
 REDIS_PASSWORD=
 
 # JWT Configuration
@@ -44,3 +46,6 @@ SENTRY_DSN=
 
 # CORS
 CORS_ORIGIN=http://localhost:3000,http://localhost:19006
+
+# Background Worker
+ENABLE_WORKER=true
