--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "start": "node src/server.js",
     "dev": "nodemon src/server.js",
+    "worker": "node src/workers/scanWorker.js",
     "migrate": "node src/database/migrate.js",
     "test": "jest --coverage",
     "test:watch": "jest --watch",
@@ -26,6 +27,7 @@
     "@google/generative-ai": "^0.2.1",
     "aws-sdk": "^2.1543.0",
     "bcryptjs": "^2.4.3",
+    "bull": "^4.12.0",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
